--- a/base/index.html
+++ b/base/index.html
@@ -46,7 +46,7 @@
 
 	<body onload="drawCanvas();">
         <div id="monkey"> <canvas id="movemonkey" width="312" height="312"></canvas> </div>
-		<div id="welcome"><span>welcome to</span> RatXa<span>box</span></div>
-		<div id="description"><span>Page d'Accueil de votre</span> RatXa<span>box</span> <br><br><a>Xavier</a></div>
+		<div id="welcome"><span>welcome to</span> Easy<span>box</span></div>
+		<div id="description"><span>Page d'Accueil de votre</span> EASY<span>BOX</span> <br><br><a>Xavier</a></div>
 	</body>
 </html>
