--- a/base/index.html
+++ b/base/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Accueil RatXabox</title>
+		<title>Accueil Easybox</title>
         <link rel="icon" type="image/png" href="favicon.png">
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="./style/style.css">
