--- a/base/aide/contact.html
+++ b/base/aide/contact.html
@@ -11,7 +11,7 @@
 
 	<body>
 		<p id="contact">L'accès à ruTorrent pour le compte <span class="contactgr">@USER@</span> est provisoirement désactivé.</p>
-		<p class="contactgr"> Merci de contacter le support rapidement.</p>
+		<p class="contactgr"> Merci de contacter le support Easy-tk rapidement.</p>
 	</body>
 </html>
 
