--- a/base/index.html
+++ b/base/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Accueil Easybox</title>
+		<title>Accueil Easy-tk</title>
         <link rel="icon" type="image/png" href="favicon.png">
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="./style/style.css">
@@ -45,8 +45,8 @@
 	</head>
 
 	<body onload="drawCanvas();">
-        <div id="monkey"> <canvas id="movemonkey" width="312" height="312"></canvas> </div>
+        <div id="monkey"> <canvas id="movemonkey" width="229" height="229"></canvas> </div>
 		<div id="welcome"><span>welcome to</span> Easy<span>box</span></div>
-		<div id="description"><span>Page d'Accueil de votre</span> EASY<span>BOX</span> <br><br><a>Xavier</a></div>
+		<div id="description"><span>Page d'Accueil de votre</span> Easy<span>box</span> <br><br><a>Easy-tk</a></div>
 	</body>
 </html>
